	PR testsuite/39781 	* config/arm/arm.h: Define HANDLE_PRAGMA_PACK_PUSH_POP.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@146629 138bc75d-0d04-0410-961f-82ee72b054a4